Add jdk.reflect.useVarHandle mode